support for further content, font integrated, scrollbar removed, html attributes fixed

--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,13 @@
+
 body {
   background-color: var(--c1);
+  margin: 0;
+  overflow: hidden;
+  -ms-overflow-style: none; //hide Scrollbar for IE and Edge
+  scrollbar-width: none; //hide Scrollbar for Firefox
+}
+body::-webkit-scrollbar {
+  display: none; // hide Scrollbar for Chrome,...
 }
 
 :root {
@@ -15,19 +23,33 @@ body {
   transition: all 1.5s ease;
 }
 
+@font-face {
+    font-family: "jumble";
+    src: url('assets/fonts/Jumble-Regular.woff') format("woff");
+    font-style: normal;
+}
+
 h1 {
   font-family: "jumble", sans-serif;
-  font-size: 140px;
   font-weight: 400;
-  font-style: normal;
+  font-size: 140px;
   color: black;
 }
+
+// TITLE
 
 #title {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
+  animation: showContent ease-out 1s 4.6s forwards;
+}
+
+@keyframes showContent {
+  100% {
+    height: 85vh;
+  }
 }
 
 #title > div {
@@ -44,28 +66,28 @@ h1 {
   color: var(--c3);
   clip-path: circle(0% at 97px 59px);
   --size: 80%;
-  animation: titleCircleShow ease-out 3s 3.4s forwards;
+  animation: titleCircleShow ease-out 3s 3.6s forwards;
 }
 
 #title > div:nth-child(3) h1 {
   color: var(--c4);
   clip-path: circle(0% at 97px 59px);
   --size: 50%;
-  animation: titleCircleShow ease-out 2.6s 3.8s forwards;
+  animation: titleCircleShow ease-out 2.6s 4s forwards;
 }
 
 #title > div:nth-child(4) h1 {
   color: var(--c5);
   clip-path: circle(0% at 97px 59px);
   --size: 20%;
-  animation: titleCircleShow ease-out 2.2s 4.2s forwards;
+  animation: titleCircleShow ease-out 2.2s 4.4s forwards;
 }
 
 #title > div:nth-child(5) h1 {
   color: var(--c6);
   clip-path: circle(0% at 97px 59px);
   --size: 4%;
-  animation: titleCircleShow ease-out 0s 3.4s forwards;
+  animation: titleCircleShow ease-out .2s 3.4s forwards;
 }
 
 @keyframes titleCircleShow {
@@ -133,7 +155,7 @@ h1 {
   & h1:first-child {
     clip-path: circle(20% at 20px 48px);
     position: absolute;
-    color: var(--c6);
+    color: var(--c5);
     animation: loadingCircle ease 2.5s 0s forwards;
   }
 
@@ -177,4 +199,12 @@ h1 {
     opacity: 1;
     transform: scale(1) translateY(0);
   }
+}
+
+// CONTENT
+
+#content {
+  background: var(--c2);
+  height: calc(100vh + 33px);
+  border-radius: 33px 33px 0 0;
 }
